--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecordingActivity"></activity>
+        <activity android:name=".SheetMusicActivity2"></activity>
+        <activity android:name=".RecordingActivity" />
         <activity android:name=".MainActivity" />
         <activity
             android:name=".SplashActivity"
