--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AllSongsActivity" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
@@ -75,6 +74,9 @@
                 android:scheme="file" />
             </intent-filter>
         </activity>
+
+
+        <activity android:name=".CarouselActivity"/>
 
     </application>
 
