--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".SetFileNameActivity"
-            android:theme="@android:style/Theme.Dialog"></activity>
+        <activity
+            android:name=".SetFileNameActivity"
+            android:theme="@android:style/Theme.Dialog" />
         <activity android:name=".ChooseSongActivity" />
         <activity android:name=".AddFolderPopupActivity" />
         <activity android:name=".RecordingActivity" />
@@ -76,7 +77,6 @@
         </activity>
 
 
-        <activity android:name=".CarouselActivity"/>
 
     </application>
 
