--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,10 @@ allprojects {
     repositories {
         jcenter()
         google()
-        maven { url "https://jitpack.io" }
+        maven {
+            url "https://jitpack.io"
+
+        }
     }
 }
 
