--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,6 @@ dependencies {
     //Toast
     implementation 'com.github.GrenderG:Toasty:1.4.2'
 
+    implementation 'ru.rambler.android:swipe-layout:1.1.0'
 
 }
