--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".Girls"></activity>
+        <activity android:name=".RenameFilePopup"></activity>
+        <activity android:name=".songEditActivity" />
+        <activity android:name=".Girls" />
         <activity
             android:name=".deletePopup"
             android:theme="@android:style/Theme.DeviceDefault.Light.Dialog" />
